sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:19: error: type mismatch;
 found   : Unit
 required: Boolean
		if(inverse=false)
                          ^